add working tags UI
